syntax = "proto3";
package prism.treasury;

import "gogoproto/gogo.proto";
import "prism/treasury/action.proto";
import "prism/treasury/stream_swap.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/prism-finance/prism-core/x/treasury/types";

// GenesisState defines the treasury module's genesis state.
message GenesisState {
  Action action = 1 [(gogoproto.nullable) = false];
  repeated StreamSwap stream_swap_list = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
